# envoy-extproc-sdk

./: .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yaml  envoy.yaml  justfile  pyproject.toml
envoy_extproc_sdk/: __init__.py  __main__.py  extproc.py  health.py
envoy_extproc_sdk/testing/: extproc.py  http.py
examples/: Dockerfile  __init__.py  body_modify.py  context.py  decorated.py  digest.py  echo.py  llm_proxy.py  timer.py  trivial.py
scripts/: install_generated_code.sh  remove_generated_code.sh
tests/integration/: conftest.py  test_examples.py
tests/mocks/echo/: echo.py
tests/mocks/streaming/: Dockerfile  streaming.py
tests/unit/: test_base.py  test_decorated.py  test_digester.py  test_echo.py  test_timer.py
