[project]
name = "envoy_extproc_sdk"
version = "0.1.2"
description = "A python SDK for envoy External Processors, forked from https://github.com/wrossmorrow/envoy-extproc-sdk"
readme = "README.md"
requires-python = ">=3.9,<3.10"
authors = [{ name = "W. Ross Morrow", email = "morrowwr@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "grpcio (>=1.71.0,<2.0.0)",
    # "grpcio-tools (>=1.71.0,<2.0.0)",
    "protoc-gen-validate (>=0.4.2,<0.5.0)",
    "grpclib (>=0.4.2,<0.5.0)",
    "ddtrace (>=1.1,<1.2)",
    "datadog (>=0.44.0,<0.45.0)",
    "protobuf (>=3.20.3,<3.21)",
]

[project.urls]
Homepage = "https://github.com/Tanantor/envoy-extproc-sdk"
Repository = "https://github.com/Tanantor/envoy-extproc-sdk"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
resolution = "lowest-direct"
dev-dependencies = [
    "black (>=22.3.0,<23.0.0)",
    "coverage (>=7.7.1,<8.0.0)",
    "flake8 (>=3.9.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "isort (>=5.9.3,<6.0.0)",
    "mypy (>=0.910,<0.920)",
    "mypy-protobuf (>=3.2.0,<4.0.0)",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    # "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "pytest-flakefinder>=1.1.0",
    "pytest-randomly>=3.16.0",
    "requests (>=2.28.1,<3.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envoy_extproc_sdk"]

[tool.hatch.build.targets.wheel.shared-data]
"envoy_extproc_sdk/py.typed" = "envoy_extproc_sdk/py.typed"

[tool.black]
line-length = 100
include = 'envoy_extproc_sdk\/.*\.py$|examples\/.*\.py$|tests\/.*\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | _build
    | buck-out
    | build
    | dist
    | generated
  )/
)
'''

[tool.isort]
src_paths = ["config", "tests"]
profile = "black"
line_length = 80
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
extend_skip = "generated"
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
branch = true
source = ["envoy_extproc_sdk",]
omit = ["*/__init__.py", "*/__main__.py", "examples/*.py",]

[tool.coverage.report]
show_missing = true
fail_under = 30
